test_regress/t/t_randomize_method_complex_bad.out
%Error: t/t_randomize_method_complex_bad.v:17:9: 'randomize() with' on a non-class-instance 'int'
   17 |       i.randomize() with { v < 5; });
      |         ^~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_randomize_method_complex_bad.v:17:28: Can't find definition of variable: 'v'
   17 |       i.randomize() with { v < 5; });
      |                            ^
%Error: Exiting due to
